--- a/fixed_deposit.html
+++ b/fixed_deposit.html
@@ -9,15 +9,29 @@
 		}
 	</style>
 	<script>
-		function interest(duration)
-			{
-				if(duration > 0 and duration < 2)
-					document.f1.rate.value = 4
-				else if(duration >= 2 and duration <5 )
-					document.f1.rate.value = 5;
-				else if(duration >= 5 and duration <= 10)
-					document.f1.rate.value = 6;
-			}
+	function setROI() {
+		var tf = document.f1.rate;
+		var val=document.getElementById("duration").value;
+		var num=Number(val);
+		if(num>=0 && num<=2)
+			tf.value=5;
+		else if(num>=3 && num<=5)
+			tf.value=6;
+		else if(num>=6 && num<=10)
+			tf.value=7;
+	}
+	
+	function calculate()
+	{
+		var amt=Number(document.f1.amount.value);
+		var rate=Number(document.f1.rate.value);
+		var duration=Number(document.f1.duration.value);
+		var si=(amt*rate*duration)/100;
+		amt=amt+si;
+		//alert("Maturity value is " +"Rs " +amt);
+		document.f1.ans.value = amt;
+	}   
+		
 	</script>
 	</head>
 	<body>
@@ -33,9 +47,12 @@
 			<h3>
 			Applicant name : <input type="text" name="name" maxLength=20 minLength=3 required><br>
 			Amount : <input type="number" name="amount" min=10000 max=100000000><br>
-			Duration : <input type="number" name="duration" min=1 max=10><br>
-			ROI : <input type="number" name="rate" id="interest" disabled><br>
-			Maturity : <input type="number" name="maturity" id="maturity" disabled><br>
+			Duration : <input type="number" name="duration" id="duration" onChange="setROI()" min=1 max=10><br>
+			ROI : <input type="number" name="rate" id="rate"  disabled><br>
+			Maturity Amount : <input type="number" name="ans" id="ans"  disabled><br>
+			<input type="button" onClick="calculate()" value="Calculate Maturity">
+			<input type="reset" onClick="reset()" value="Reset">
+			
 			</h3>
 		</form>
 		</fieldset><br>
