--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  background-image: url('imge2.jpg');
+  background-repeat: no-repeat
 }
 
 .topnav {
@@ -64,7 +66,7 @@ body {
 <div class="topnav">
 	<img src="logo.jpg" align="left" width="52" height="52">
   <div class="nav">
-  <a href="home.html">Home</a>
+  <a href="index.html">Home</a>
   <a href="aboutus.html">About Us</a>
   <a href="netbanking.html">Net Banking</a>
   <a href="Services.html">Services</a>
